docs: add `PUT` game route documentation
